# lamina-lang

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
src/: core.rs  error.rs  lexer.rs  lib.rs  parser.rs  syntax.rs  vm.rs
src/interpreter/: environment.rs  error.rs  eval.rs  mod.rs  value.rs
src/ir/: expr.rs  lowering.rs  mod.rs  typecheck.rs
src/lexer/: mod.rs  semicolon.rs  token.rs  tokenizer.rs
src/parser/: error.rs  mod.rs  nodes.rs  syntax.rs  type.rs
src/repl/: command.rs  error.rs  handlers.rs  mod.rs  state.rs
src/typecheck/: ast.rs  context.rs  environment.rs  error.rs  infer.rs  mod.rs  type.rs  unify.rs
src/vm/: compiler.rs  environment.rs  error.rs  instruction.rs  machine.rs  mod.rs  value.rs
tests/: core.rs  infer.rs  interpreter.rs  ir.rs  lexer.rs  parser.rs  typecheck.rs  vm.rs
